	-----
	4296 Cramp Card:	Temp Plug: 10z per mob-level on a 3% chance.
	7458 Fortune Horn:	It's a custom name ^^;
	12016 Speed Increasing Potion: A potion which increases the moving speed of a character for a duration.
	12017 Speed Decreasing Potion: A potion which decreases the moving speed of a character for a duration.
	-----

=========================
04/26
	* Updated drop rates of Remover/Gemini with help of Tharis [Playtester]
	- droprate is now 1/2 of the guessed values
04/25
	* Updated OBB/OCA/etc [Vicious]
	* Re-enabled Biolab's summon summmoning [Vicious]
04/25
	* Fixed price of yummy fish 150z -> 250z [Playtester]
	* Updated Mode and Delays of Odin Temple mobs(using Frus delays for now) [Playtester]
	* Fixed Element, Race, aDelay, aMotion and Range of Plasma and Breeze [Playtester]
	* Updated the remaining mob names [Playtester]
	* Updated the iRO and kRO mob names [Playtester]
	- mob names done up to ID 1491, working on the rest now
	* Updated the header in the mob db text files [Playtester]
	- the order is now SpriteName,kROName,iROName
04/24
	* Updated OBB, OCA, Cookie Bag, Giftbox, OVB drops to X.2(X.3?)
	  ItemSummonList provided by Peter [Vicious]
	* Fixed Running's cast time [Playtester]
	* Fixed Item 2520 and Item 662 according to info from Haplo [Playtester]
04/23
	* Updated mob_skill_db: all idle and walk skills had their rate up x10. [Skotlex]
	* Put in most of the Kiel Hyre monster drops, at temporary low rates. [MasterOfMuppets]
	* Updated some loot sell prices for the Kiel Hyre/Odin Temple monsters [MasterOfMuppets]
	* NPC_CHANGE<property> should be self, not target [Vicious]
	* Increased all chase/follow skill rates by 10 since their trigger rate has
	  been decreased by that much due to the unit-data update. [Skotlex]
04/22
	* Updated Kiel/Odin mob stat to kRO official guidebook [Vicious]
	* Major fix to the Einbroch mobs [Playtester]
	- stats and drops should now be to 99% official
04/21