@@ -3,6 +3,8 @@ Date	Added
 AS OF SVN REV. 5091, WE ARE NOW USING TRUNK.  ALL UNTESTED BUGFIXES/FEATURES GO INTO TRUNK.
 IF YOU HAVE A WORKING AND TESTED BUGFIX PUT IT INTO STABLE AS WELL AS TRUNK.
 2006/04/27
+	* Added battle config hide_woe_damage which hides damage on woe maps
+	  packet-wise (battle/client.conf). [Skotlex]
 	* Fixed base-level up @ command giving stat points instead of taking them
 	  away when leveling down. [Skotlex
 	* Some small change in pc_heal which would let you have negative SP if you
