@@ -52,6 +52,11 @@ max_hair_color: 8
 min_cloth_color: 0 
 max_cloth_color: 4
 
+//When set to yes, the damage field in packets sent from woe maps will be set
+//to -1, making it impossible for GMs, Bots and Hexed clients to know the
+//actual damage caused by attacks. (Note 1)
+hide_woe_damage: no
+
 //"hair style" number that identifies pet.
 //NOTE: The client uses the "hair style" field in the mob packet to tell them apart from mobs.
 //This value is always higher than the max hair-style available in said client.
