@@ -363,6 +363,7 @@ extern struct Battle_Config {
 	unsigned short idle_no_share;
 	unsigned short party_even_share_bonus;
 	unsigned short delay_battle_damage;
+	unsigned short hide_woe_damage;
 	unsigned short display_version;
 	unsigned short who_display_aid;
 
